--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - LINTR_COMMENT_BOT=false
 r_github_packages:
   - jimhester/lintr
+  - leffj/mctoolsr
 script: 
   - R -f tests/render_rmds.R
 
